working on part mod

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -53,6 +53,10 @@
       <span>
         <a href="/login_util" class="btn btn-white pulsor">Modify Owners</a>
       </span>
+
+      <span>
+        <!-- <a href="/" class="btn btn-white pulsor">Modify Parts</a> -->
+      </span>
     </div>
   </div>
 
