Animations added to actions, changed index spacing

--- a/public/admin/create_jt.html
+++ b/public/admin/create_jt.html
@@ -167,7 +167,8 @@
         <h3 class="h_format">Action Plan</h3>
       </div>
 
-      <table id="action_table">
+      <table>
+        <tbody id="action_table">
           <tr id="action_header">
               <td class="shorten_td"    id="action_type">Type </td>
               <td class="action_column" id="action_desc">Description </td>
@@ -179,10 +180,11 @@
               <td class="shorten_td"    id="action_email">Email Sent </td>
               <td class="shorten_td"> Delete </td>
           </tr>
-        </table>     
+        </tbody>
+      </table>     
     </form>
     
-    <div class="mycontainer">
+    <div class="div_footer">
       <table class="page-footer">
         <tr>
           <td> <button class="btn btn-white table_button" type="button" id="add_jt_row">Add Action</button></td>
