--- a/public/admin/view_jt.html
+++ b/public/admin/view_jt.html
@@ -74,7 +74,10 @@
     <div class="mycontainer">
       <table class="page-footer">
         <tr>
-          <td><a href="login" class="btn btn-white table_button" id="login_redirect">Login to edit</a></td>
+          <td>
+            <a href="/" class="btn btn-white table_button">Return to Home Page</a>
+            <a href="login" class="btn btn-white table_button" id="login_redirect">Login to edit</a>
+          </td>
         </tr>
       </table>
     </div>
