--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -11,7 +11,6 @@
     <!-- Load JavaScript files -->
     <script src='../js/jquery.min.js'></script>
     <script src='../js/core.js'></script>
-    <!-- <script src='../js/core_test.js'></script> -->
     <script src='../js/js.cookie.js'></script>
   </head>
 
@@ -19,7 +18,7 @@
   <body id="create_page">
     <section class="user-logged-in">
           <div id="clock" class="dark display">
-          <div class="weekdays">day</div>
+          <div class="weekdays"></div>
           <div class="month_date"></div>
           <div class="year"></div>
           <div class="ampm"></div>
@@ -183,7 +182,8 @@
         <h3 class="h_format">Action Plan</h3>
       </div>
 
-      <table id="action_table">
+      <table>
+        <tbody id="action_table">
           <tr id="action_header">
               <td class="shorten_td"    id="action_type">Type </td>
               <td class="action_column" id="action_desc">Description </td>
@@ -195,11 +195,12 @@
               <td class="shorten_td"    id="action_email">Email Sent </td>
               <td class="shorten_td"> Delete </td>
           </tr>
-        </table>      
+        </tbody>
+      </table>      
     </form>
     
 
-    <div class="mycontainer">
+    <div class="div_footer">
       <table class="page-footer">
         <tr>
           <td> <button class="btn btn-white table_button" type="button" id="add_row">Add Action</button></td>
@@ -208,11 +209,6 @@
         </tr>
       </table>
     </div>
-
-    <!--<script>
-      var dropdown = document.querySelector('select');
-      dropdown.className = dropdown.options[dropdown.selectedIndex].className;
-    </script>-->
 
     <script type="text/javascript" src="../js/clock.js"></script>
     <script type="text/javascript" src="../js/moment.js"></script>
