--- a/public/home_page.html
+++ b/public/home_page.html
@@ -29,12 +29,13 @@
         <a href="/view_current" id="gr_auto" class="btn btn-white pulsor">Automation</a>
       </span>
       <span disabled>
-        <a href="" id="gr_cement" class="btn btn-white pulsor">Cementing</a>
+        <!-- <a href="" id="gr_cement" class="btn btn-white pulsor">Cementing</a> -->
+        <a href="/view_exec" id="gr_exec" class="btn btn-white pulsor">Executive</a>
       </span>
     </div>
     <div class="Cell">
       <span>
-        <a href="/view_exec" id="gr_exec" class="btn btn-white pulsor">Executive</a>
+        
       </span>
     </div> 
 
@@ -51,11 +52,11 @@
     <h2 align="center">Utilities</h2>
     <div class="Cell">
       <span>
-        <a href="/login_util" class="btn btn-white pulsor">Modify Owners</a>
+        <a href="/login_util" id="mod_owners" class="btn btn-white pulsor">Modify Owners (All)</a>
       </span>
 
       <span>
-        <!-- <a href="/" class="btn btn-white pulsor">Modify Parts</a> -->
+        <!-- <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac)</a> -->
       </span>
     </div>
   </div>
