--- a/public/admin/disabled_view.html
+++ b/public/admin/disabled_view.html
@@ -179,7 +179,7 @@
     </form>
     
 
-    <div class="mycontainer">
+    <div class="div_footer">
       <table class="page-footer">
         <tr>
           <td> <div class="btn btn-white table_button" id="view_return">Return to View Page</div></td>          
