Added Cadillac part modding

--- a/public/admin/disabled_view.html
+++ b/public/admin/disabled_view.html
@@ -157,40 +157,37 @@
       </table>
     </form>
 
+    <div id="index_page_footer">
 
-    <form id="info_rows">
-      <div class="mycontainer">
-        <h3 class="h_format">Action Plan</h3>
-      </div>
+      <form id="info_rows">
+        <div class="mycontainer">
+          <h3 class="h_format">Action Plan</h3>
+        </div>
 
-      <table id="action_table" >
-          <tr id="action_header">
-              <td class="shorten_td"    id="action_type">Type</td>
-              <td class="action_column" id="action_desc">Description</td>
-              <td class="action_column" id="action_owner">Owner</td>
-              <td class="date_td"       id="action_start">Start</td>
-              <td class="date_td"       id="action_deadline">Deadline</td>
-              <td class="date_td"       id="action_complete">Completed</td>
-              <td class="shorten_td"    id="action_state">State</td>
-              <td class="shorten_td"    id="action_email">Email Sent</td>
-              <td class="shorten_td"> Delete</td>
+        <table id="action_table" >
+            <tr id="action_header">
+                <td class="shorten_td"    id="action_type">Type</td>
+                <td class="action_column" id="action_desc">Description</td>
+                <td class="action_column" id="action_owner">Owner</td>
+                <td class="date_td"       id="action_start">Start</td>
+                <td class="date_td"       id="action_deadline">Deadline</td>
+                <td class="date_td"       id="action_complete">Completed</td>
+                <td class="shorten_td"    id="action_state">State</td>
+                <td class="shorten_td"    id="action_email">Email Sent</td>
+                <td class="shorten_td"> Delete</td>
+            </tr>
+          </table>
+      </form>
+      
+
+      <div class="div_footer">
+        <table class="page-footer">
+          <tr>
+            <td> <div class="btn btn-white table_button" id="view_return">Return to View Page</div></td>          
           </tr>
         </table>
-    </form>
-    
-
-    <div class="div_footer">
-      <table class="page-footer">
-        <tr>
-          <td> <div class="btn btn-white table_button" id="view_return">Return to View Page</div></td>          
-        </tr>
-      </table>
+      </div>
     </div>
-
-    <!--<script>
-      var dropdown = document.querySelector('select');
-      dropdown.className = dropdown.options[dropdown.selectedIndex].className;
-    </script>-->
 
     <script type="text/javascript" src="../js/clock.js"></script>
     <script type="text/javascript" src="../js/moment.js"></script>
