--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -46,38 +46,39 @@
 
     </table>      
     
+    <div id="index_page_footer">
+      <div class="mycontainer">
+          <h3 class="h_format">e-Lert Categories</h3>
+      </div>
 
-    <div class="mycontainer">
-        <h3 class="h_format">e-Lert Categories</h3>
-    </div>
+      <table id="category_table">
+        <tr class="category_rows">
+            <td> 
+                <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
+                <button type="button" class="categories Quality"   id="Quality">Quality</button>
+                <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
+                <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
+                <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
+            </td>
+        </tr>
+        <tr class="category_rows">
+            <td >
+                <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
+                <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
+                <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
+                <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
+                <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
+            </td>
+        </tr>
+      </table>
 
-    <table id="category_table">
-      <tr class="category_rows">
-          <td> 
-              <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
-              <button type="button" class="categories Quality"   id="Quality">Quality</button>
-              <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
-              <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
-              <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
-          </td>
-      </tr>
-      <tr class="category_rows">
-          <td >
-              <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
-              <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
-              <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
-              <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
-              <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
-          </td>
-      </tr>
-    </table>
-
-    <div class="mycontainer">
-      <div class="page-footer">
-        <a href="/" class="btn btn-white">Logout of Post-It</a>
+      <div class="mycontainer">
+        <div class="page-footer">
+          <a href="/" class="btn btn-white">Logout of Post-It</a>
+        </div>
       </div>
     </div>
-
+    
     <script type="text/javascript" src="../js/clock.js"></script>
     <script type="text/javascript" src="../js/moment.js"></script>
   </body>
