--- a/public/admin/login_utils.html
+++ b/public/admin/login_utils.html
@@ -9,10 +9,9 @@
 
     <!-- Load JavaScript files -->
     <script src='../js/jquery.min.js'></script>
-    <script src='../js/mod_owners.js'></script>
+    <script src='../js/mod_core.js'></script>
     <script src='../js/js.cookie.js'></script>
-    </head>
-        
+    </head>        
 
 
     <body id="page-id-index" class="blue_background">
@@ -25,7 +24,7 @@
                 <p class="error"></p>
             </div>
             <form id="login_form" ng-submit="handleLoginForm()" >
-        <!-- <div>
+       <!--  <div>
                     <div id="login_button" class="btn btn-white" method="post" style="width: 100%; text-align: center; ">Login is now working</div>
                 </div> -->
                 <div>
