--- a/public/admin/mod_owners.html
+++ b/public/admin/mod_owners.html
@@ -5,7 +5,7 @@
   <title>Modify Post-it Owners</title>
 
   <script type="text/javascript" src="../js/jquery.min.js"></script>
-  <script type="text/javascript" src="../js/mod_owners.js"></script>
+  <script type="text/javascript" src="../js/mod_core.js"></script>
 
   <meta name="description" content="Bootstrap.">
   <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
@@ -19,7 +19,7 @@
 </head>
 
 
-<body id="index_page">
+<body id="owners_page">
 
   <div id="myModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
