--- a/public/home_page.html
+++ b/public/home_page.html
@@ -56,7 +56,7 @@
       </span>
 
       <span>
-        <!-- <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac)</a> -->
+        <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac Only)</a>
       </span>
     </div>
   </div>
