--- a/public/home_page.html
+++ b/public/home_page.html
@@ -58,6 +58,14 @@
       <span>
         <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac Only)</a>
       </span>
+
+      <!-- <span>
+        <a href="/login" id="mod_parts" class="btn btn-white pulsor">Log Into QRQC</a>
+      </span> -->
+
+      <span>
+        <a href="/forgot_password" id="mod_parts" class="btn btn-white pulsor">Forgot My Password</a>
+      </span>
     </div>
   </div>
 
