Disabled Forgot My Password

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -63,9 +63,9 @@
         <a href="/login" id="mod_parts" class="btn btn-white pulsor">Log Into QRQC</a>
       </span> -->
 
-      <span>
+      <!-- <span>
         <a href="/forgot_password" id="mod_parts" class="btn btn-white pulsor">Forgot My Password</a>
-      </span>
+      </span> -->
     </div>
   </div>
 
