Added temporary checkin page

--- a/public/home_page.html
+++ b/public/home_page.html
@@ -59,6 +59,10 @@
         <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac Only)</a>
       </span>
 
+      <span>
+        <a href="/login_checkin" id="checkin" class="btn btn-white pulsor">Check-In Participants</a>
+      </span>
+
       <!-- <span>
         <a href="/login" id="mod_parts" class="btn btn-white pulsor">Log Into QRQC</a>
       </span> -->
