added maintenance to categories

--- a/public/admin/create.html
+++ b/public/admin/create.html
@@ -63,6 +63,7 @@
                 <option value="Operation" class="Operation">Operations Efficiency</option>
                 <option value="Supply"    class="Supply">Supply Chain</option>
                 <option value="Misc"      class="Misc">Miscellaneaous</option>
+                <option value="Maint"     class="Maint">Maintenance</option>
               </select>
             </td>
         </tr>
