--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -54,20 +54,21 @@
       <table id="category_table">
         <tr class="category_rows">
             <td> 
-                <button type="button" class="categories Safety"    id="Safety">Safety/ Environment</button>
-                <button type="button" class="categories Quality"   id="Quality">Quality</button>
-                <button type="button" class="categories Activity"  id="Activity">Activity (Sales)</button>
-                <button type="button" class="categories Inventory" id="Inventory">Inventory</button>
-                <button type="button" class="categories Scrap"     id="Scrap">Scrap</button>
+                <button type="button" class="upper_categories Safety"    id="Safety">Safety/ Environment</button>
+                <button type="button" class="upper_categories Quality"   id="Quality">Quality</button>
+                <button type="button" class="upper_categories Activity"  id="Activity">Activity (Sales)</button>
+                <button type="button" class="upper_categories Inventory" id="Inventory">Inventory</button>
+                <button type="button" class="upper_categories Scrap"     id="Scrap">Scrap</button>
             </td>
         </tr>
         <tr class="category_rows">
             <td >
-                <button type="button" class="categories Hr"        id="Hr">HR/ Labor</button>
-                <button type="button" class="categories Delivery"  id="Delivery">Delivery</button>
-                <button type="button" class="categories Operation" id="Operation">Operations Efficiency</button>
-                <button type="button" class="categories Supply"    id="Supply">Supply Chain</button>
-                <button type="button" class="categories Misc"      id="Misc">Miscellaneaous</button>
+                <button type="button" class="lower_categories Hr"        id="Hr">HR/ Labor</button>
+                <button type="button" class="lower_categories Delivery"  id="Delivery">Delivery</button>
+                <button type="button" class="lower_categories Operation" id="Operation">Operations Efficiency</button>
+                <button type="button" class="lower_categories Supply"    id="Supply">Supply Chain</button>
+                <button type="button" class="lower_categories Misc"      id="Misc">Miscellaneaous</button>
+                <button type="button" class="lower_categories Maint"     id="Maint">Maintenance</button>
             </td>
         </tr>
       </table>
