--- a/public/admin/view_current.html
+++ b/public/admin/view_current.html
@@ -54,20 +54,21 @@
     <table id="category_table">
       <tr class="category_rows">
           <td> 
-              <div class="categories Safety"    >Safety/ Environment</div>
-              <div class="categories Quality"   >Quality</div>
-              <div class="categories Activity"  >Activity (Sales)</div>
-              <div class="categories Inventory" >Inventory</div>
-              <div class="categories Scrap"     >Scrap</div>
+              <div class="upper_categories Safety"    >Safety/ Environment</div>
+              <div class="upper_categories Quality"   >Quality</div>
+              <div class="upper_categories Activity"  >Activity (Sales)</div>
+              <div class="upper_categories Inventory" >Inventory</div>
+              <div class="upper_categories Scrap"     >Scrap</div>
           </td>
       </tr>
       <tr class="category_rows">
           <td >
-              <div class="categories Hr"        >HR/ Labor</div>
-              <div class="categories Delivery"  >Delivery</div>
-              <div class="categories Operation" >Operations Efficiency</div>
-              <div class="categories Supply"    >Supply Chain</div>
-              <div class="categories Misc"      >Miscellaneaous</div>
+              <div class="lower_categories Hr"        >HR/ Labor</div>
+              <div class="lower_categories Delivery"  >Delivery</div>
+              <div class="lower_categories Operation" >Operations Efficiency</div>
+              <div class="lower_categories Supply"    >Supply Chain</div>
+              <div class="lower_categories Misc"      >Miscellaneaous</div>
+              <div class="lower_categories Maint"     >Maintenance</div>
           </td>
       </tr>
     </table>
