Multi-level user log in

--- a/public/admin/disabled_exec.html
+++ b/public/admin/disabled_exec.html
@@ -182,7 +182,7 @@
     <div class="div_footer">
       <table class="page-footer">
         <tr>
-          <td> <div class="btn btn-white table_button" id="view_return">Return to View Page</div></td>          
+          <td> <button class="btn btn-white table_button" type="button" id="view_return">Return to Main Page</button></td>          
         </tr>
       </table>
     </div>
