--- a/public/home_page.html
+++ b/public/home_page.html
@@ -45,6 +45,10 @@
       <span>
         <a href="/view_current" id="cd_plant" class="btn btn-white pulsor">Plant</a>
       </span>
+
+      <span>
+        <a href="/view_current" id="cd_tooling" class="btn btn-white pulsor">Tooling</a>
+      </span>
     </div>
   </div>
 
@@ -52,20 +56,20 @@
     <h2 align="center">Utilities</h2>
     <div class="Cell">
       <span>
-        <a href="/login_util" id="mod_owners" class="btn btn-white pulsor">Modify Owners (All)</a>
+        <a href="/login_util" id="mod_owners" class="btn btn-white pulsor">Modify Owners (All Levels)</a>
       </span>
 
-      <span>
+      <!-- <span>
         <a href="/login_util" id="mod_parts" class="btn btn-white pulsor">Modify Parts (Cadillac Only)</a>
-      </span>
+      </span> -->
 
       <span>
         <a href="/login_checkin" id="checkin" class="btn btn-white pulsor">Check-In Participants</a>
       </span>
 
-      <!-- <span>
-        <a href="/login" id="mod_parts" class="btn btn-white pulsor">Log Into QRQC</a>
-      </span> -->
+      <span>
+        <a href="/login" id="" class="btn btn-white pulsor">Log Into QRQC (All Levels)</a>
+      </span>
 
       <!-- <span>
         <a href="/forgot_password" id="mod_parts" class="btn btn-white pulsor">Forgot My Password</a>
